--- a/package.json
+++ b/package.json
@@ -8,13 +8,14 @@
   },
   "dependencies": {
     "axios": "^0.21.1",
+    "echarts": "^5.1.1",
     "element-plus": "^1.0.2-beta.40",
     "nprogress": "^0.2.0",
     "path": "^0.12.7",
-    "path-to-regexp": "^6.2.0",
     "querystring": "^0.2.1",
     "screenfull": "^5.1.0",
     "vue": "^3.0.5",
+    "vue-echarts": "^6.0.0-rc.4",
     "vue-i18n": "9.0.0",
     "vue-router": "^4.0.6",
     "vuex": "4.0"
