--- a/server-admin/package.json
+++ b/server-admin/package.json
@@ -14,6 +14,7 @@
     "path": "^0.12.7",
     "querystring": "^0.2.1",
     "screenfull": "^5.1.0",
+    "three": "^0.138.0",
     "vue": "^3.0.5",
     "vue-echarts": "^6.0.0-rc.4",
     "vue-i18n": "9.0.0",
