server 变更为egg.js

--- a/server/.gitignore
+++ b/server/.gitignore
@@ -5,11 +5,10 @@ node_modules/
 package-lock.json
 yarn.lock
 coverage/
-dist/
 .idea/
 run/
 .DS_Store
 *.sw*
 *.un~
-.tsbuildinfo
-.tsbuildinfo.*
+typings/
+.nyc_output/
